Try to deploy